Fixed a few bugs related to the view of calendar add it some new features. Next thing is to fix the layout problem when opening all calendar windows (removed the top: 100% from init position before opening but i need to make some checks). And last thing is to readjust the logic of processing the limits.

--- a/Assets/CSS/calendar.css
+++ b/Assets/CSS/calendar.css
@@ -30,7 +30,7 @@
 
     display: block;
     position: absolute;
-    top: 100%;
+    top: 0;
     left: 0;
     color: var(--calendar-text-color);
     opacity: 1;
@@ -64,6 +64,8 @@
     user-select: none;
     opacity: 0 !important;
     visibility: hidden !important;
+    /* transform: scale(0);
+    transform-origin: top left; */
 }
 
 .input_calendar_vfz_outer_wrap .input_calendar_vfz_inner_calendar {
@@ -215,6 +217,11 @@
     color: grey;
     text-decoration: line-through;
     background-color: transparent;
+    cursor: not-allowed;
+}
+
+.input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_disabled_day.outofbound {
+    cursor: auto;
 }
 
 .input_calendar_vfz_outer_wrap .input_calendar_vfz_wrap .calendar_vfz_day.calendar_vfz_next_month_day,
